--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "= installation",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd frontend && npm run dev\" \"cd server && flask run\""
+    "start": "concurrently \"cd frontend && npm run dev\" \"cd server && node index.js\""
   },
   "repository": {
     "type": "git",
