--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "= installation",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd frontend && npm run dev\" \"cd server && node index.js\""
+    "start": "concurrently \"cd frontend && npm run dev\" \"cd server && nodemon index.js\""
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/PepperAddict/compare#readme",
   "dependencies": {
-    "concurrently": "^7.1.0"
+    "concurrently": "^7.1.0",
+    "nodemon": "^2.0.16"
   }
 }
